--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -31,14 +31,14 @@
         --chart-5: 27 87% 67%;
     }
 
-    .dark {
+    .dark:root {
         --background: 222, 47%, 11%;
         --foreground: 210 40% 98%;
         --card: 222.2 84% 4.9%;
         --card-foreground: 210 40% 98%;
         --popover: 222.2 84% 4.9%;
         --popover-foreground: 210 40% 98%;
-        --primary: 210 40% 98%;
+        --primary: 192, 91%, 36%;
         --primary-foreground: 222.2 47.4% 11.2%;
         --secondary: 175, 84%, 32%;
         --secondary-foreground: 175, 77%, 26%;
